[project]
name = "intro2ml-coding-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas[pyarrow]>=3.0.1",
    "scikit-learn>=1.8.0",
]
